corrections to the indicated fragments

--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -138,10 +138,10 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2024}
 }
 
-@misc{MPWiK,
-		author = {Miejskie Przedsiębiorstwo Wodociągów i Kanalizacji w Warszawie},
-    title = {{Wodociągi Warszawskie. Strona główna}},
-    note = {\url{https://ebok.mpwik.com.pl/#/login} [dostęp dnia 21 września 2024]},
+@misc{Play24,
+		author = {P4 Sp. z o.o.},
+    title = {{Aplikacja Play24. Strona główna}},
+    note = {\url{https://www.play.pl/play24} [dostęp dnia 26 września 2024]},
     year = {2024}
 }
 
@@ -160,7 +160,26 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2024}
 }
 
+@misc{Docker-docs,
+    author = {Docker},
+    title = {{Use containerized databases}},
+    note = {\url{https://docs.docker.com/guides/use-case/databases/} [dostęp dnia 26 września 2024]},
+    year = {2024}
+}
 
+@ARTICLE{vsupalov,
+    author = {vsupalov},
+    title = {{Should You Run Your Database in Docker?}},
+    note = {\url{https://vsupalov.com/database-in-docker/} [dostęp dnia 25 lipca 2024]},
+    year = {2024}
+}
+
+@ARTICLE{EARTHLY,
+    author = {Aveek Das},
+    title = {{Using Docker with Postgres: Tutorial and Best Practices}},
+    note = {\url{https://earthly.dev/blog/postgres-docker/} [dostęp dnia 11 lipca 2023]},
+    year = {2024}
+}
 
 @booklet{Marcin,
 title = {{BPMN Notacja modelowania procesów biznesowych}},
